# ruview-wifi-sensing-poc

./: .gitignore  LICENSE  README.md
backend/: .env.example  package-lock.json  package.json
backend/src/: docs.ts  index.ts  llm.ts  motion.ts
sensor/: Cargo.toml
sensor/src/: main.rs
web/: .env.example  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
